Bug 442569 - Cannot recolor negative colored icons
Summary: Cannot recolor negative colored icons
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI normal
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords:
: 436535 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-09-16 23:56 UTC by Aleix Pol
Modified: 2021-10-05 21:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.88
Sentry Crash Report:


Attachments
remove color is all red (1.55 MB, image/png)
2021-09-16 23:56 UTC, Aleix Pol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2021-09-16 23:56:12 UTC
Like edit-delete, the negative color is not even coming from QPalette but KColorScheme so it's not even possible to override from Kirigami.

Creating the bug here because I'm not sure where else. It's either:
* breeze for using the negative color, or for not providing a text-colored action-delete icon
* Kirigami for only allowing to override the active text color
* KColorScheme for not allowing to provide a KColorScheme.
Comment 1 Aleix Pol 2021-09-16 23:56:57 UTC
Created attachment 141633 [details]
remove color is all red
Comment 2 Marco Martin 2021-09-17 07:53:59 UTC
kiconloader supports negative text colors, the issue is not exactly that.

the problem here is that the button is colored with negative text color, but the edit-delete icon is as well, technically correctly, but they are colored wit hthe same color
Comment 3 Marco Martin 2021-09-17 08:01:59 UTC
(In reply to Marco Martin from comment #2)
> kiconloader supports negative text colors, the issue is not exactly that.
> 
> the problem here is that the button is colored with negative text color, but
> the edit-delete icon is as well, technically correctly, but they are colored
> wit hthe same color

though however, indeed KIconLoader::setCustomPalette is a problem
Comment 4 Nate Graham 2021-09-21 18:20:08 UTC
*** Bug 436535 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2021-10-05 21:42:52 UTC
Git commit 4724eb820176df335fae586f929977af928affa3 by Nate Graham, on behalf of Aleix Pol.
Committed on 05/10/2021 at 21:41.
Pushed by ngraham into branch 'master'.

Also highlight charged text colors

It can happen that the colors and the background are the same and then
we're at a loss.

M  +3    -3    src/kiconcolors.cpp

https://invent.kde.org/frameworks/kiconthemes/commit/4724eb820176df335fae586f929977af928affa3