Also highlight charged text colors

It can happen that the colors and the background are the same and then
we're at a loss.

BUG: 442569